client: replace jgoodies with flatlaf. add option to preferences to select which theme to use.