@@ -8,15 +8,6 @@ if [ "$?" -ne "0" ]; then
 	exit 1
 fi
 
-platformOpts=
-java -Xdock:name="test" -version 1>/dev/null 2>&1
-if [ "$?" -eq "0" ]; then
-	# running on OSX
-	platformOpts="-Xdock:name=LogicSniffer -Dcom.apple.mrj.application.apple.menu.about.name=LogicSniffer"
-else
-	# running on other platforms
-	platformOpts="-DPlastic.defaultTheme=SkyBluer -Dswing.defaultlaf=com.jgoodies.looks.plastic.Plastic3DLookAndFeel"
-fi
 
 # cross-platform "readlink -f" function; taken and modified (clean ups and made
 # recursive) from <http://stackoverflow.com/questions/1055671>.
@@ -45,9 +36,7 @@ classpath="$basedir/bin/*"
 memsettings=-Xmx1024m
 
 
-#JDK_JAVA_OPTIONS=--add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
-
-java $platformOpts $memsettings -Djna.nosys=true \
+java $memsettings -Djna.nosys=true \
   -Djava.library.path="$basedir/bin/" \
   -cp "$classpath" nl.lxtreme.ols.runner.Runner \
   -pluginDir="$plugindir" "$@"
